create app.rb with logic and files for front end. rewrite method specs to pass with new outputs. add content to README.md.

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,9 +1,9 @@
 <form class="" action="/results">
   <div class="form-group">
     <label for="first-phrase">Enter a word or phrase:</label>
-    <input type="text" id="first-phrase" name="" class="form-control">
+    <input type="text" id="first_phrase" name="first_phrase" class="form-control">
     <label for="second-phrase">Enter a word or phrase:</label><br>
-    <input type="text" id="second-phrase" name="" class="form-control">
+    <input type="text" id="second_phrase" name="second_phrase" class="form-control">
   </div>
-  <button type="submit" name="reveal" class="btn">reveal</button>
+  <button type="submit" class="btn">Reveal</button>
 </form>
